--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,19 @@
     transform: rotate(360deg);
   }
 }
+h1 {
+  color: #1b0092;
+  font-size: 3rem;
+  margin-bottom: 1.5rem;
+  letter-spacing: 2px;
+  font-family: 'Segoe UI', Arial, sans-serif;
+}
+
+p{
+  color: #fb0000;
+  font-size: 1.2rem;
+  line-height: 1.6;
+  margin: 0.5rem 0;
+  font-family: 'Arial', sans-serif;
+}
+
